# polars-strsim

./: Cargo.toml  LICENSE  README.md  demo.py  justfile  pyproject.toml  readme.md
.github/workflows/: publish_to_pypi.yml
polars_strsim/: __init__.py  utils.py
python/polars_strsim/: __init__.py  wrap.py
src/: lib.rs  strsim.rs
src/expressions/: mod.rs  strsim.rs
