[package]
name = "polars-strsim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "polars_strsim"
crate-type = ["cdylib"]

[dependencies]
polars = "0.30.0"
pyo3 = "0.19.0"
pyo3-polars = "0.4.1"
rayon = "1.7.0"
