[package]
name = "polars-strsim"
version = "0.2.2"
edition = "2021"

[lib]
name = "polars_strsim"
crate-type = ["cdylib"]

[dependencies]
polars = { version = "0.40.0", default-features = false }
pyo3 = { version = "0.21.2", features = ["extension-module", "abi3-py38"] }
pyo3-polars = { version = "0.14.0", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
rayon = "1.10.0"

[target.'cfg(target_os = "linux")'.dependencies]
jemallocator = { version = "0.5.4", features = ["disable_initial_exec_tls"] }
