[build-system]
requires = ["maturin>=1.5.1,<2.0"]
build-backend = "maturin"

[project]
version = "0.2.1"
name = "polars-strsim"
dependencies = ["polars>=0.20.0"]
requires-python = ">=3.8"
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Programming Language :: Rust",
]
keywords = ["polars-extension", "string-similarity"]
authors = [{ name = "Jeremy Foxcroft" }]
description = "Polars extension for string similarity"
readme = "README.md"

[project.urls]
Repository = "https://github.com/foxcroftjn/polars-strsim"
Issues = "https://github.com/foxcroftjn/polars-strsim/issues"
